Fixed issue with overflow on the side navigation.

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,10 +5,12 @@
     display: grid;
     grid-area: 2/1/3/3;
     grid-template-columns: 22rem 1fr;
+    overflow: hidden;
 }
 
 .profile-bowl {
     flex-grow: 1;
+    overflow: scroll;
 }
 
 aside {
